# Relaxed-Lenses

./: .gitignore  CMakeLists.txt  README.it.md  README.md  lente.cpp  lente.hpp  main.cpp  maingrad.cpp  param.inf  param.sup
Mathematica/: interpolating.nb
include/: Arco.hpp  Curva.hpp  Lente.hpp  Polinomio.hpp  Punti.hpp  Raggio.hpp  Sistema.hpp
src/: Arco.cpp  Curva.cpp  Lente.cpp  Polinomio.cpp  Punti.cpp  Raggio.cpp  Sistema.cpp  main.cpp
